<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#92c5fc"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnLinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="LinearLayout"
        android:text="@string/boton1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btnRelativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="RelativeLayout"
        android:text="@string/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/btnFrameLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="FrameLayout"
        android:text="@string/boton3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/btnConstraintLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="ConstraintLayout"
        android:text="@string/boton4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/btnCardView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="CardView"
        android:text="@string/boton5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/btnRecyclerView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="RecyclerView"
        android:text="@string/boton6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <Button
        android:id="@+id/btnListView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="ListView"
        android:text="@string/boton7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <Button
        android:id="@+id/btnInterfaz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:text="Interfaz 1"
        android:onClick="InterfazNavegador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />

    <Button
        android:id="@+id/btnInterfaz2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="InterfazLogin"
        android:text="Interfaz 2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

    <Button
        android:id="@+id/btnInterfaz3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="InterfazAbout"
        android:text="Interfaz 3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <Button
        android:id="@+id/btnInterfaz4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ADD0"
        android:onClick="InterfazListView"
        android:text="Interfaz 4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />
</androidx.constraintlayout.widget.ConstraintLayout>